Fix deprecated URL method problem